--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Boiler Controller Add-ons
 url: https://github.com/euanjmackenzie-lgtm/ha-boiler-controller-addon
-maintainer: YOUR NAME euanjmackenzie
+maintainer: e mackenzie euanjmackenzie@gmail.com
